# mlops-examples

./: .gitignore  .gitlab-ci.yml  Dockerfile.runner  Makefile  README.md  docker-compose.runner.yml  notebook.ipynb  pyproject.toml
.dvc/: config
archive/: make_data.py  t92_train.py  train.py
configs/: ci.yaml  dev.yaml
dags/: demo.py  mlops_pipeline.py
data/processed/: .gitignore  breast_cancer_transformed.csv.dvc  test_indices.pt  train_indices.pt  val_indices.pt
data/raw/: .gitignore  breast_cancer.csv.dvc
docs/: ci-walkthrough.md  failure-modes.md  promotion-policy.md  repro-checklist.md  stack-overview.md  tutorial.md
feature_repo/: feature_definitions.py  feature_store.yaml
feature_repo/data/: driver_stats.parquet
feature_store/: feature_definitions.py  feature_store.yaml
scripts/: eval.py  extract.py  load.py  log.py  pipeline.py  split.py  train.py  transform.py
src/: __init__.py  eval.py  extract.py  model.py  tracking.py  train.py  transform.py  utils.py
src/data/: __init__.py  load.py
src/evaluation/: __init__.py  metrics.py  plots.py
src/mlops_examples/: __init__.py  config.py  utils.py
src/mlops_examples/cli/: __init__.py  eval.py  extract.py  load.py  log.py  snapshot.py  split.py  train.py  transform.py
src/mlops_examples/data/: __init__.py  extract.py  load.py  split.py  transform.py
src/mlops_examples/modeling/: __init__.py  evaluate.py  metrics.py  plots.py  train.py
src/mlops_examples/tracking/: __init__.py  mlflow.py
tests/: test_extract.py  test_feature_store_definitions.py  test_mlflow_logging.py  test_snapshot.py  test_split.py  test_training_workflow.py
