[project]
name = "mlops-examples"
description = "Examples and tutorials for using mlops-services with DVC and MLflow"
requires-python = ">=3.11,<3.14"
version = "0.1.0"
dependencies = [
  "mlflow>=2.10,<3",
  "DVC[s3]>=3.0,<4",
  "boto3>=1.28",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "feast[postgres]>=0.58.0",
  "pydantic<2.12",
  "protobuf<5",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "pillow>=12.1.0",
  "tqdm>=4.67.3",
  "numpy>=2.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
