[project]
name = "mlops-examples"
description = "Examples and tutorials for using mlops-services with DVC and MLflow"
requires-python = ">=3.11,<3.14"
version = "0.1.0"
dependencies = [
  "mlflow>=2.10,<3",
  "DVC[s3]>=3.0,<4",
  "boto3>=1.28",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "feast[postgres]>=0.58.0",
  "pydantic<2.12",
  "protobuf<5",
]

[project.scripts]
mlops-extract = "mlops_examples.cli.extract:main"
mlops-transform = "mlops_examples.cli.transform:main"
mlops-snapshot = "mlops_examples.cli.snapshot:main"
mlops-load = "mlops_examples.cli.load:main"
mlops-split = "mlops_examples.cli.split:main"
mlops-train = "mlops_examples.cli.train:main"
mlops-eval = "mlops_examples.cli.eval:main"
mlops-log = "mlops_examples.cli.log:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_examples"]
